# pvgis-prototype

./: .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  MANIFEST.in  NOTICE  Notice.txt  ReadMe.md  environment.yml  era5_t2m_over_esti_jrc.nc  era5_ws2m_over_esti_jrc.nc  horizon_profile_over_esti_jrc.nc  horizon_profile_over_esti_jrc.zarr  mkdocs.yml  models_prototyping.py  paper.md  pyproject.toml  pytest.ini  references.bib  requirements.txt  sarah2_sid_over_esti_jrc.nc  sarah2_sis_over_esti_jrc.nc  setup.cfg  spectral_effect_cSi_2013_over_esti_jrc.nc  spectral_effect_cSi_over_esti_jrc.nc  values.yaml
.gitlab/: CODEOWNERS
.gitlab/issue_templates/: issue_.md
data/: variables.yml
docs/: acknowledgements.md  advanced_use.md  basic_usage.md  credits.md  features.md  index.md  license.md  overview.md  pagetree.md  performance_optimisation.md  pvgis_cheat_sheet.md
docs/api/: api.md  index.md  numpy.md  position.md  power.md  surface_position_optimisation.py
docs/casts/: pvgis-prototype_irradiance_diffuse_inclined.cast
docs/cli/: basics.md  csv.md  features.md  fingerprint.md  generate_csv_files.sh  help.md  index.md  logging.md  metadata.md  numpy.md  performance_broadband_example.csv  performance_broadband_example_with_real_data.csv  performance_broadband_example_with_real_data_metadata.yaml  plots.md  power_broadband_example.csv  power_broadband_example_vvv_e07d3d7b3610250a060d91c39187fd8ab75104f4f5603b25356172d298f8b537.csv  power_broadband_example_vvv_e07d3d7b3610250a060d91c39187fd8ab75104f4f5603b25356172d298f8b537_metadata.yaml  precision.md  qrcode.md  rounding.md  symbol_groups.py  symbols.md  timestamps.md  verbosity.md  welcome.md
docs/code_reference/: adding_new_features.md  algorithms.md  api_reference.md  cli_reference.md  index.md  web_api_reference.md
docs/css/: custom.css  mkdocstrings.css
docs/data/: .gitattributes  era5_t2m_over_esti_jrc.nc  era5_ws2m_over_esti_jrc.nc  horizon_profile_over_esti_jrc.nc  power_broadband_example_vvv_e07d3d7b3610250a060d91c39187fd8ab75104f4f5603b25356172d298f8b537.csv  power_broadband_example_vvv_e07d3d7b3610250a060d91c39187fd8ab75104f4f5603b25356172d298f8b537_metadata.yaml  sarah2_sid_over_esti_jrc.nc  sarah2_sis_over_esti_jrc.nc  solar_incidence_angle_sample.csv  spectral_effect_cSi_2013_over_esti_jrc.nc  spectral_effect_cSi_over_esti_jrc.nc
docs/development/: adding_new_features.md  contribution_guidelines.md  conventions.md  gantt.md  index.md  optimisation.md  performance_optimisation.md  photovoltaic_performance.md  profiling.md  pytest.md  roadmap_and_progress.md  solar_geometry.md  solar_irradiance.md  solar_position.md  state_and_future_of_pvgis.md  time_series.md  topography.md
docs/how_to/: direct_irradiance.md  help.md  index.md  power.md  solar_geometry_introduction.md  solar_geometry_overview.md  solar_incidence_angle.md  solar_irradiance.md
docs/images/: .gitattributes  pvgis6_example_of_performance_analysis_300dpi.xcf  pvgis6_example_of_performance_analysis_qr_code_300dpi.xcf  pvgis6_example_of_solar_positioning_300dpi.xcf  pvgis6_snapshot_of_architecture_graph_on_18092025.xcf  pvgis6_snapshot_of_web_api_documentation.xcf
docs/includes/: abbreviations.md  tags.md
docs/install/: index.md  install.md
docs/js/: extra-loader.js  mermaid_config.js
docs/notebooks/: plot_solar_geometry_pvis.ipynb  solar_position_pvgis_noaa_vs_other_models.ipynb  solar_position_pvgis_noaa_vs_usno.ipynb  t.csv  (+2 more)
documentation/: analysis_of_rsun.md
gitlab/: dependency-scans.yaml
overrides/: main.html
presentation/: cli_structure.yml  redesigning_pvgis.md
public/: 404.html  index.html  objects.inv  sitemap.xml  tags.json
pvgisprototype/: __init__.py  array_types.py  caching.py  cli.py  constants.py  conversions.py  data_class_factory.py  data_structures.py  direct_irradiance.py  direct_radiation.py  energy.py  estimate_energy.py  example_pv_estimation_output.py  extraterrestrial_irradiance.py  geometry.py  helpers.py  irradiance.py  log.py  manual.py  meteorology.py  position.py  solar_altitude.py  solar_azimuth.py  solar_constant.py  solar_constant_plot.py  solar_declination.py  solar_declination_plot.py  solar_geometry.py  solar_geometry_constants.py  solar_geometry_constants_plot.py  solar_geometry_pvgis.py  solar_geometry_pvgis_constants.py  solar_geometry_pvgis_constants_plot.py  solar_geometry_pvgis_variables.py  solar_geometry_skyfield.py  solar_geometry_variables.py  solar_geometry_variables_plot.py  solar_incidence.py  solar_position.py  solar_position_plot.py  (+8 more)
scripts/: generate_reference_pages.py
tests/: _test_calculate_solar_declination_pvgis.py  _test_calculate_solar_time_pvgis.py  _test_solar_geometry_constants.py  _test_solar_geometry_variables.py  _test_solar_position.py  cases_equation_of_time.py  cases_solar_altitude.py  cases_solar_azimuth.py  cases_solar_declination.py  conftest.py  helpers.py  test_angular_loss_factor.py  test_calculate_apparent_solar_time_milne1921.py  test_calculate_apparent_solar_time_noaa.py  test_calculate_equation_of_time_noaa.py  test_calculate_hour_angle.py  test_calculate_optical_air_mass.py  test_calculate_solar_altitude.py  test_calculate_solar_altitude_azimuth_skyfield.py  test_calculate_solar_altitude_noaa.py  test_calculate_solar_altitude_pvis.py  test_calculate_solar_altitude_pvlib.py  test_calculate_solar_azimuth.py  test_calculate_solar_azimuth_noaa.py  test_calculate_solar_azimuth_pvis.py  test_calculate_solar_azimuth_pvlib.py  test_calculate_solar_declination.py  test_calculate_solar_declination_hargreaves.py  test_calculate_solar_declination_noaa.py  test_calculate_solar_declination_pvgis.py  test_calculate_solar_declination_pvis.py  test_calculate_solar_declination_pvlib.py  test_calculate_solar_geometry_overview.py  test_calculate_solar_hour_angle_declination_skyfield.py  test_calculate_solar_hour_angle_noaa.py  test_calculate_solar_hour_angle_pvis.py  test_calculate_solar_hour_angle_pvlib.py  test_calculate_solar_time.py  test_calculate_solar_time_ephem.py  test_calculate_solar_time_skyfield.py  (+32 more)
(+1733 files in other folders)
