[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pvgisprototype"
dynamic = ["version"]
description = "Photovoltaic Geographic Information System"
readme = {file = "ReadMe.md", content-type = "text/markdown"}
authors = [
    { name = 'Nikos Alexandris', email = 'Nikos.Alexandris@ec.europa.eu' },
    { name = 'Olympia Gounari', email = '' },
]
requires-python = "==3.11.*"
dependencies = [
    "typer",
    "numpy",
    "rich",
    "pandas",
    "xarray",
    "loguru",
    "xarray_extras",
    "pydantic",
    "pvlib",
    "netcdf4",
    "distributed",
    "matplotlib",
    "ephem",
    "skyfield",
    "suncalc",
    "pysolar",
]
classifiers = [
    'Development Status :: 3 - Alpha',
    'Environment :: Console',
    'Intended Audience :: Science/Research',
    # 'License :: OSI Approved :: European Union Public License 1.2 (EUPL 1.2)',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3',
    'Topic :: Scientific/Engineering :: Information Analysis'
]
license = {text = "EUPL-1.2"}
keywords = [
  "PVGIS",
  "Photovoltaic",
  "Solar resources",
  "Xarray",
  "netcdf4",
  "NetCDF",
  "HDF",
]
[project.optional-dependencies]
web = [
    "bokeh",
]
dev = [
  "devtools",  # move to optional dependencies ?
  "pre-commit",
  "black",
  "flake8",
  "isort",
  "pytest",
]
docs = [
  "mkdocs-material",
  "mkdocs-table-reader-plugin",
  "mkdocs-exclude",
  "mkdocstrings[python]",
  "mkdocs-bibtex",
  "markdown-exec[ansi]",
]

[project.urls]
homepage = "https://pvgis.jrc.it"
issues = ""
repository = ''

[project.scripts]
pvgis-prototype = "pvgisprototype.cli.cli:app"

[tool.hatch.version]
source = "vcs"
path = "pvgisprototype/_version.py"

[tool.hatch.build.hooks.vcs]
version-file = "pvgisprototype/_version.py"

[tool.towncrier]
# https://towncrier.readthedocs.io/en/stable/#quick-start
package = "pvgisprototype"
package_dir = "pvgisprototype"
name = "pvgis-prototype"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | .pvgisprototype_virtual_environment
)/
'''

[tool.pylint.MASTER]
# Ensure `duplicate-code` and any other errors that depend on not running in
# parallel are reported:
jobs = 1
enable-all-extensions = true
output-format = "colorized"
ignore-paths = [
# Managed by tools, best to use `# pylint: disable=...` inline comments for any
# other ignores.
    ".+/version.py",
    ".*/.+/version.py",
]
# Extend linting to usage of trusted extension packages
extension-pkg-allow-list = ["lxml"]

[tool.pylint.TYPECHECK]
# Ignore false negatives from external packages
ignored-classes = ["lxml.etree.QName.localname"]
# Match Black's defaults
# https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#pylint

[tool.pylint.format]
max-line-length = "88"

[tool.pylint."messages control"]
# Workaround Prospector bug with PyLint:
# https://github.com/PyCQA/prospector/issues/596#issue-1592499675
disable = ["relative-beyond-top-level"]

[[tool.mypy.overrides]]
module = ["argcomplete"]
ignore_missing_imports = true

[tool.vulture]
# https://github.com/jendrikseipp/vulture#ignoring-files
exclude = ["pvgisprototype/version.py"]

[tool.isort]
# Match Black's defaults
# https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#isort
profile = "black"

[tool.pytest.ini_options]
addopts = "-ra --verbose --showlocals --tb=short"
testpaths = ["tests"]
log_cli = true
filterwarnings = [
    'ignore:distutils Version classes are deprecated. Use packaging.version instead:DeprecationWarning',
    'ignore:Deprecated call to `pkg_resources.declare_namespace:DeprecationWarning',
]
