[tool.hatch.metadata]
allow-direct-references = true


[tool.pdm]
[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pvgisprototype"
dynamic = ["version"]
description = "Photovoltaic Geographic Information System Prototype"
readme = {file = "ReadMe.md", content-type = "text/markdown"}
authors = [
    { name = 'Nikos Alexandris', email = 'nikosalexandris@duck.com' },
    { name = 'Olympia Gounari', email = '' },
    { name = 'Alekos Falagas', email = ''},
    { name = 'Alba Santos Rodriguez', email = ''},
]
requires-python = "<3.12,>=3.11"
dependencies = [
    "typer==0.15.1",
    "numba==0.60.0",
    "rich",
    "pandas",
    "xarray==2025.8.0",
    "loguru>0.7.2",
    "richuru",
    "pydantic",
    "pydantic-numpy==6.0.1",
    "pvlib",
    "distributed",
    "matplotlib",
    "ephem",
    "skyfield",
    "suncalc",
    "pysolar",
    "uniplot==0.21.4",
    # currently part of regular functions !
    "cachetools",
    "orjson",
    "sparklines==0.7.0",
    "qrcode",
    "seaborn>=0.13.2",
    "polars>=1.9.0",
    "pydantic-settings>=2.5.2",
    "bottleneck>=1.4.0",
    "h5netcdf==1.4.0",
    "llvmlite>=0.43.0",
    "gravis @ git+https://github.com/raufs/gravis.git@master",
    "networkx>=3.5",
    "simpleeval>=1.0.3",
    "zarr==3.1.1",
    "pyarrow==21.0.0",
    "click==8.1.8",
    "tornado>6.4",
    "colorama>=0.4.6",
    "cloudpickle==3.1.1",
    "fsspec==2025.7.0",
    "zipp==3.23.0",
    "devtools>=0.12.2",
    "setuptools>=80",
    "certifi>=2025.8.3",
    "xarray-extras==0.6.0",
    "google-crc32c",  # Recommended by numcodecs
]
classifiers = [
  'Development Status :: 4 - Beta',
  'Environment :: Console',
  'Intended Audience :: Developers',
  'Intended Audience :: Science/Research',
  'Natural Language :: English',
  'Operating System :: OS Independent',
  'Programming Language :: Python :: 3',
  'Topic :: Scientific/Engineering :: Information Analysis'
]
license = {text = "EUPL-1.2"}
keywords = [
  "PVGIS",
  "Photovoltaic",
  "Solar resources",
  "Xarray",
  "NetCDF",
  "HDF",
]
[project.optional-dependencies]
web = [
  "aiohttp",
  "aiocache",
  "uvicorn",
  "fastapi",
  "bokeh",
  "pyinstrument",
]
dev = [
  "black",
  "devtools",
  "flake8",
  "isort",
  "pre-commit",
  "pytest",
  "towncrier",
  "timezonefinder",
]
test = [
  "pytest",
  "pytest-cov",
  "pytest-xdist",
  "bokeh",
  "openpyxl",
]
docs = [
  "markdown-exec[ansi]",
  "mkdocs-section-index",
  "mkdocs-bibtex",
  "mkdocs-exclude",
  "mkdocs-git-revision-date-localized-plugin",
  "mkdocs-material",
  "mkdocs-minify-plugin",
  "mkdocs-table-reader-plugin",
  "mkdocstrings[python]",
  "mkdocs-mermaid2-plugin",
  "pipdeptree",
  "mkdocs-pagetree-plugin",
  "mkdocs-badges",
  "mkdocs-coverage",
  "diagrams",
  "mkdocs-jupyter",
  "mkdocs-pdf",
]
all = ["pvgisprototype[web, dev, test, docs]"]

[project.urls]
homepage = "https://pvgis.jrc.it"
issues = ""
repository = ''

[project.scripts]
pvgis-prototype = "pvgisprototype.cli.cli:app"

[tool.hatch.version]
source = "vcs"
path = "pvgisprototype/_version.py"

[tool.hatch.build.hooks.vcs]
version-file = "pvgisprototype/_version.py"

[tool.towncrier]
# https://towncrier.readthedocs.io/en/stable/#quick-start
package = "pvgisprototype"
package_dir = "pvgisprototype"
name = "pvgis-prototype"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | .pvgisprototype_virtual_environment
)/
'''

[tool.pylint.MASTER]
# Ensure `duplicate-code` and any other errors that depend on not running in
# parallel are reported:
jobs = 1
enable-all-extensions = true
output-format = "colorized"
ignore-paths = [
# Managed by tools, best to use `# pylint: disable=...` inline comments for any
# other ignores.
    ".+/version.py",
    ".*/.+/version.py",
]
# Extend linting to usage of trusted extension packages
extension-pkg-allow-list = ["lxml"]

[tool.pylint.TYPECHECK]
# Ignore false negatives from external packages
ignored-classes = ["lxml.etree.QName.localname"]
# Match Black's defaults
# https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#pylint

[tool.pylint.format]
max-line-length = "88"

[tool.pylint."messages control"]
# Workaround Prospector bug with PyLint:
# https://github.com/PyCQA/prospector/issues/596#issue-1592499675
disable = ["relative-beyond-top-level"]

[[tool.mypy.overrides]]
module = ["argcomplete"]
ignore_missing_imports = true

[tool.vulture]
# https://github.com/jendrikseipp/vulture#ignoring-files
exclude = ["pvgisprototype/version.py"]

[tool.isort]
# Match Black's defaults
# https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#isort
profile = "black"

[tool.pytest.ini_options]
addopts = "-ra --verbose --showlocals --tb=short"
testpaths = ["tests"]
log_cli = true
filterwarnings = [
    'ignore:distutils Version classes are deprecated. Use packaging.version instead:DeprecationWarning',
    'ignore:Deprecated call to `pkg_resources.declare_namespace:DeprecationWarning',
]

[tool.ruff]
extend-exclude = [
    "pvgisprototype/plot/",
    "pvgisprototype/algorithms/pvis/power.py",
    "pvgisprototype/algorithms/pvis/average_photon_energy.py",
    "pvgisprototype/web_api/plot/plot_example.py",
    "pvgisprototype/algorithms/usno/",
    "pvgisprototype/api/position/hour_angle.py",
    "pvgisprototype/cli/position/sunrise.py",
    "pvgisprototype/api/spark.py",
]
force-exclude = true
